--- a/ch3/Makefile
+++ b/ch3/Makefile
@@ -1,9 +1,9 @@
 gcc_options = -std=c++17 -Wall --pedantic-error
 
-program : main.cpp all.h all.h.gch
-	g++ $(gcc_options) -include all.h $< -o $@
+program : main.cpp .all.h .all.h.gch
+	g++ $(gcc_options) -include .all.h $< -o $@
 
-all.h.gch : all.h
+all.h.gch : .all.h
 	g++ $(gcc_options) -x c++-header -o $@ $<
 
 run : program
@@ -11,6 +11,6 @@ run : program
 
 clean :
 	rm -f ./program
-	rm -f ./all.h.gch
+	rm -f ./.all.h.gch
 
 .PHONY : run clean
